--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,7 @@ dependencies:
   diffutil_dart: ^4.0.1
   flutter:
     sdk: flutter
-  flutter_chat_core:
-    git:
-      url: https://github.com/maodaaa/chat_core.git
-      ref: main
+  flutter_chat_core: ^2.8.0
   provider: ^6.1.5
   scrollview_observer: ^1.26.1
 
